# split_merge_hub_demo

./: .gitignore  Cargo.toml  README.md  run.sh  run_mockup.sh  run_mt_log_mockup.sh  run_mtlog.sh  run_mtlog_mockup.sh
src/: lib.rs  main.rs  main_mockup.rs
src/mt_log/: mod.rs  mt_log_record.rs
src/parallel_merge/: mod.rs  mtlog.rs
tests/: integration_test.rs
